# cargo-pro

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.github/ISSUE_TEMPLATE/: todo.md
.github/workflows/: changelog.yml
src/: app.rs  main.rs  metadata.rs
src/git/: repository.rs
src/routes/: git.rs  metadata.rs  mod.rs  profile.rs
src/vision/: mod.rs
src/vision/g6/: mod.rs
web/: main.js
web/assets/: tailwind.css
web/components/base/: BaseCard.vue
web/layout/: Footer.vue  Header.vue  Sidebar.vue
web/router/: index.js
web/store/: index.js
web/store/modules/: largeSidebar.js
web/utils/: axios.js  config.js
web/views/profile/: Profile.vue
